--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ jobs:
     docker:
       - image: openjdk:8
     environment:
-      LEIN_ROOT=nbd
+      LEIN_ROOT: nbd
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
       - restore_cache:
