--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/cci-demo-clojure
     docker:
-      - image: openjdk:8
+      - image: circleci/clojure:lein-2.7.1
     environment:
       LEIN_ROOT: nbd
       JVM_OPTS: -Xmx3200m
@@ -11,13 +11,12 @@ jobs:
       - checkout
       - restore_cache:
           key: cci-demo-clojure-{{ checksum "project.clj" }}
-      - run: bin/lein deps
+      - run: lein deps
       - save_cache:
           paths:
             - ~/.m2
-            - ~/.lein
           key: cci-demo-clojure-{{ checksum "project.clj" }}
-      - run: bin/lein do test, uberjar
+      - run: lein do test, uberjar
       - store_artifacts:
           path: target/uberjar/cci-demo-clojure.jar
           destination: uberjar
